<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    <string name="tv_main">Поиск вакансий</string>
    <string name="et_search">Введите запрос</string>
    <string name="tv_favorite">Избранное</string>
    <string name="tv_favorite_empty">Список пуст</string>
    <string name="tv_team">Команда</string>
    <string name="tv_developer">Над приложением работали</string>
    <string name="tv_developer1">Теплов Евгений Дмитриевич</string>
    <string name="tv_developer2">Нуруллин Ильдар Камилович</string>
    <string name="tv_developer3">Черкасов Сергей Анатольевич</string>
    <string name="tv_developer4">Гришин Иван Юрьевич</string>
    <string name="bottom_nav_main">Главная</string>
    <string name="bottom_nav_favorite">Избранное</string>
    <string name="bottom_nav_team">Команда</string>
    <string name="vacancy">Вакансия</string>
    <string name="vacancy_name">Android-разработчик</string>
    <string name="salary">от 100 000 ₽</string>
    <string name="employer_name">AndroSpace Production</string>
    <string name="city">Москва</string>
    <string name="required_experience">Требуемый опыт</string>
    <string name="years_of_experience">От 1 года до 3 лет</string>
    <string name="type_of_employment">Полная занятость, Удаленная работа</string>
    <string name="description_vacancy">Описание вакансии</string>
    <string name="responsibilities">Обязанности</string>
    <string name="description_of_responsibilities"> ∙ Разрабатывать новую функциональность приложения</string>
    <string name="requirements">Требования</string>
    <string name="description_of_requirements"> ∙ 100% Kotlin</string>
    <string name="conditions">Условия</string>
    <string name="description_of_conditions"> ∙ сильная команда, с которой можно расти</string>
    <string name="key_skills">Ключевые навыки</string>
    <string name="description_of_key_skills"> ∙ Знание классических алгоритмов и структуры данных</string>
    <string name="vacancy_not_found">Вакансия не найдена или\n удалена</string>
    <string name="tv_main_no_connect">Нет интернета</string>
    <string name="tv_main_error_server">Ошибка сервера</string>
    <string name="tv_main_empty">Не удалось получить\n список вакансий</string>
    <string name="tv_main_vacancy_no_search">Таких вакансий нет</string>
    <string name="no_salary">Зарплата не указана</string>
    <string name="check_internet">Проверьте подключение к интернету</string>
    <string name="error_happened">Произошла ошибка</string>
    <string name="tv_setting_filter">Настройки фильтрации</string>
    <string name="tv_working_place">Место работы</string>
    <string name="tv_industry">Отрасль</string>
    <string name="et_expected_salary_hint">Ожидаемая зарплата</string>
    <string name="et_expected_salary">Введите сумму</string>
    <string name="tv_salary_close">Не показывать без зарплаты</string>
    <string name="tv_choosing_industry">Выбор отрасли</string>
    <string name="et_choosing_industry">Введите отрасль</string>
    <string name="tv_reset">Сбросить</string>
    <string name="tv_apply">Применить</string>
    <string name="tv_choose">Выбрать</string>
    <string name="tv_choosing_working_place">Выбор места работы</string>
    <string name="et_country">Страна</string>
    <string name="et_region">Регион</string>
    <string name="tv_choosing_country">Выбор страны</string>
    <string name="tv_choosing_region">Выбор региона</string>
    <string name="et_choosing_region">Введите регион</string>
    <string name="tv_region_no_found">Такого региона нет</string>
    <string name="tv_country_no_found">Такой страны нет</string>
    <string name="tv_industry_no_found">Такой отрасли нет</string>
    <string name="tv_region_empty">Не удалось получить\nсписок</string>
</resources>
