<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tv_developer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/tv_team"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/text22"
        android:gravity="start"
        android:paddingStart="@dimen/dim16"
        android:paddingTop="@dimen/dim19"
        android:paddingBottom="@dimen/dim19"
        android:paddingEnd="@dimen/dim8"
        android:fontFamily="@font/ys_display_medium"
        />
    <TextView
        android:id="@+id/tv_developer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_team"
        android:text="@string/tv_developer"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/text32"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:gravity="start"
        android:layout_marginTop="@dimen/dim16"
        android:paddingStart="@dimen/dim16"
        android:paddingTop="@dimen/dim8"
        android:paddingBottom="@dimen/dim8"
        android:paddingEnd="@dimen/dim16"
        android:fontFamily="@font/ys_display_bold"
        />
    <TextView
        android:id="@+id/tv_developer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_developer"
        android:text="@string/tv_developer1"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/text16"
        android:textAllCaps="false"
        android:gravity="start"
        android:layout_marginTop="@dimen/dim24"
        android:layout_marginStart="@dimen/dim16"
        android:layout_marginEnd="@dimen/dim16"
        android:fontFamily="@font/ys_display_medium"
        />
    <TextView
        android:id="@+id/tv_developer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_developer1"
        android:text="@string/tv_developer2"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/text16"
        android:textAllCaps="false"
        android:gravity="start"
        android:layout_marginTop="@dimen/dim16"
        android:layout_marginStart="@dimen/dim16"
        android:layout_marginEnd="@dimen/dim16"
        android:fontFamily="@font/ys_display_medium"
        />
    <TextView
        android:id="@+id/tv_developer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_developer2"
        android:text="@string/tv_developer3"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/text16"
        android:textAllCaps="false"
        android:gravity="start"
        android:layout_marginTop="@dimen/dim16"
        android:layout_marginStart="@dimen/dim16"
        android:layout_marginEnd="@dimen/dim16"
        android:fontFamily="@font/ys_display_medium"
        />
    <TextView
        android:id="@+id/tv_developer4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_developer3"
        android:text="@string/tv_developer4"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/text16"
        android:textAllCaps="false"
        android:gravity="start"
        android:layout_marginTop="@dimen/dim16"
        android:layout_marginStart="@dimen/dim16"
        android:layout_marginEnd="@dimen/dim16"
        android:fontFamily="@font/ys_display_medium"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
