<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/TeamBackgroundLightMode"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tv_developer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/tv_team"
        android:textColor="@color/TeamTextColorLightMode"
        android:textSize="22sp"
        android:gravity="start"
        android:paddingStart="@dimen/Team_developerPaddingStartEnd"
        android:paddingTop="@dimen/Team_developerPaddingTopBottom"
        android:paddingBottom="@dimen/Team_developerPaddingTopBottom"
        android:paddingEnd="@dimen/Team_developerPaddingEndTopBottom"
        android:fontFamily="@font/ys_display_medium"
        />
    <TextView
        android:id="@+id/tv_developer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_team"
        android:text="@string/tv_developer"
        android:textColor="@color/TeamTextColorLightMode"
        android:textSize="32sp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:gravity="start"
        android:layout_marginTop="@dimen/Team_developerMarginTopStartEnd"
        android:paddingStart="@dimen/Team_developerPaddingStartEnd"
        android:paddingTop="@dimen/Team_developerPaddingEndTopBottom"
        android:paddingBottom="@dimen/Team_developerPaddingEndTopBottom"
        android:paddingEnd="@dimen/Team_developerPaddingStartEnd"
        android:fontFamily="@font/ys_display_bold"
        />
    <TextView
        android:id="@+id/tv_developer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_developer"
        android:text="@string/tv_developer1"
        android:textColor="@color/TeamTextColorLightMode"
        android:textSize="@dimen/Team_developerTextSize"
        android:textAllCaps="false"
        android:gravity="start"
        android:layout_marginTop="24dp"
        android:layout_marginStart="@dimen/Team_developerMarginTopStartEnd"
        android:layout_marginEnd="@dimen/Team_developerMarginTopStartEnd"
        android:fontFamily="@font/ys_display_medium"
        />
    <TextView
        android:id="@+id/tv_developer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_developer1"
        android:text="@string/tv_developer2"
        android:textColor="@color/TeamTextColorLightMode"
        android:textSize="@dimen/Team_developerTextSize"
        android:textAllCaps="false"
        android:gravity="start"
        android:layout_marginTop="@dimen/Team_developerMarginTopStartEnd"
        android:layout_marginStart="@dimen/Team_developerMarginTopStartEnd"
        android:layout_marginEnd="@dimen/Team_developerMarginTopStartEnd"
        android:fontFamily="@font/ys_display_medium"
        />
    <TextView
        android:id="@+id/tv_developer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_developer2"
        android:text="@string/tv_developer3"
        android:textColor="@color/TeamTextColorLightMode"
        android:textSize="@dimen/Team_developerTextSize"
        android:textAllCaps="false"
        android:gravity="start"
        android:layout_marginTop="@dimen/Team_developerMarginTopStartEnd"
        android:layout_marginStart="@dimen/Team_developerMarginTopStartEnd"
        android:layout_marginEnd="@dimen/Team_developerMarginTopStartEnd"
        android:fontFamily="@font/ys_display_medium"
        />
    <TextView
        android:id="@+id/tv_developer4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_developer3"
        android:text="@string/tv_developer4"
        android:textColor="@color/TeamTextColorLightMode"
        android:textSize="@dimen/Team_developerTextSize"
        android:textAllCaps="false"
        android:gravity="start"
        android:layout_marginTop="@dimen/Team_developerMarginTopStartEnd"
        android:layout_marginStart="@dimen/Team_developerMarginTopStartEnd"
        android:layout_marginEnd="@dimen/Team_developerMarginTopStartEnd"
        android:fontFamily="@font/ys_display_medium"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
