<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorPrimary">
    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="@dimen/dim48"
        android:layout_height="@dimen/dim48"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_choosing_working_place"
        android:layout_marginHorizontal="@dimen/dim4"
        android:layout_marginVertical="@dimen/dim8"/>
    <TextView
        android:id="@+id/tv_choosing_working_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/backArrow"
        app:layout_constraintTop_toTopOf="@id/backArrow"
        app:layout_constraintBottom_toBottomOf="@id/backArrow"
        android:text="@string/tv_choosing_working_place"
        android:textSize="@dimen/text22"
        android:textColor="?attr/colorOnPrimary"
        android:paddingTop="@dimen/dim19"
        android:paddingBottom="@dimen/dim19"
        android:layout_marginEnd="@dimen/dim4"
        android:layout_marginStart="@dimen/dim4"
        android:fontFamily="@font/ys_display_medium"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim16"
        android:layout_marginStart="@dimen/dim16"
        android:layout_marginEnd="@dimen/dim4"
        app:layout_constraintBottom_toTopOf="@id/et_region"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_choosing_working_place"
        app:endIconDrawable="@drawable/filter_arrow_right_icon"
        android:hint="@string/et_country"
        style="@style/et_industry_work_place"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_country_hint"
            android:textAppearance="@style/input_text"
            android:paddingTop="@dimen/dim8"
            android:paddingBottom="@dimen/dim8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_region"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim16"
        android:layout_marginEnd="@dimen/dim4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_country"
        app:endIconDrawable="@drawable/filter_arrow_right_icon"
        android:hint="@string/et_region"
        style="@style/et_industry_work_place">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_region_hint"
            android:clickable="true"
            android:textAppearance="@style/input_text"
            android:paddingTop="@dimen/dim8"
            android:paddingBottom="@dimen/dim8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <android.widget.Button
        android:id="@+id/apply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/dim72"
        android:layout_marginHorizontal="@dimen/dim16"
        android:background="@drawable/main_tv_shape"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:text="@string/tv_choose"
        android:textSize="@dimen/text16"
        android:fontFamily="@font/ys_display_medium"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
